# RustyTerra

./: Cargo.toml
assets/block/: dirt.block.ron  grass.block.ron  sand.block.ron  snow.block.ron
src/: blocks.rs  main.rs  skysphere.rs
src/chunk/: generation.rs  mod.rs  rendering.rs
