[package]
name = "Blocky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy =  "0.6"
noise = "0.6"
bevy_fly_camera = "0.8"
futures-lite = "1.12"
anyhow ="1.0"
ron = "0.7"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
building-blocks = { version = "0.7", feature = ["mesh"] }
itertools = "0.10"